# zvenv

./: LICENSE  LICENSE.txt  README.md  pyproject.toml
src/zvenv/: __init__.py  __main__.py  ebpkgs.py
